src/objects/loan__Consolidated_Loan_Payment_Line__c.object
<CustomObject>
    <description>This object is not used as of now. The idea of creating this object was to save the state of the account at the time the consolidated loan payment was made. However,  this is not a requirement.</description>
    <fields>
        <fullName>loan__Consolidated_Loan_Payment__c</fullName>
        <label>Consolidated Loan Payment</label>
        <referenceTo>loan__Consolidated_Loan_Payment__c</referenceTo>
        <relationshipLabel>Consolidated Loan Payment Lines</relationshipLabel>
        <relationshipName>Consolidated_Loan_Payment_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>loan__Loan_Account__c</fullName>
        <formula>loan__Loan_Payment_Transaction__r.loan__Loan_Account__r.Name</formula>
        <label>Loan Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Loan_Payment_Transaction__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This is the associated loan payment transaction.</description>
        <label>Loan Payment Transaction</label>
        <referenceTo>loan__Loan_Payment_Transaction__c</referenceTo>
        <relationshipLabel>Consolidated Loan Payment Lines</relationshipLabel>
        <relationshipName>Consolidated_Loan_Payment_Lines</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Consolidated Loan Payment Line</label>
    <nameField>
        <displayFormat>CLPL-{00000000}</displayFormat>
        <label>Line Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consolidated Loan Payment Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>